2008-04-23	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/src/local_system.cpp:
	added patch by Ben Dailey <bdailey/at/bhmsd/dot/k12/dot/in/dot/us>
	which adds dates and times to logfiles

2008-04-21	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* configure.in:
	* README:
	made 1.0.8 release

2008-04-21	Andriano Rino <rino-andr/at/users/dot/sourceforge/dot/net>

	* ica/resources/it.ts:
	* ima/resources/it.qm:
	* ima/resources/it.ts:
	* lib/resources/it.ts:
	refreshed Italian localization

2008-04-17	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/src/isd_server.cpp:
	cleanups

	* lib/src/isd_connection.cpp:
	do not load key-file from empty filename

	* lib/include/isd_connection.h:
	* lib/src/isd_connection.cpp:
	added gracefulClose() which should be used whereever possible as this
	gracefully closes the connection instead of aborting it - avoids
	SIGPIPE-signals

	* ica/src/demo_server.h:
	* ica/src/demo_server.cpp:
	* ica/src/isd_server.cpp:
	* ica/src/isd_server.h:
	* ima/src/main_window.cpp:
	* lib/include/isd_connection.h:
	* lib/include/isd_base.h:
	* lib/src/isd_connection.cpp:
	rewrote the way, demo-servers are instantiated, started, stopped and
	destroyed - hopefully fixes crashs when using demo-mode heavily

	* lib/src/vncview.cpp:
	update scaled-size as soon as we have a connection - fixes buggy
	demo-mode and remote-control

	* ica/src/isd_server.cpp:
	* ima/dialogs/config.ui:
	* ima/src/config_widget.cpp:
	* ima/src/main_window.h:
	* ima/src/main.cpp:
	* ima/src/config_widget.h:
	* ima/src/client.cpp:
	* ima/src/classroom_manager.cpp:
	* lib/include/isd_connection.h:
	* lib/src/isd_connection.cpp:
	determine demo-master-IP via active master-client connection -
	obsoletes network-interface-configuration in master-application

	* ima/src/cmd_input_dialog.cpp:
	fixed orientation of OK- and cancel-button

	* lib/src/isd_connection.cpp: