@@ -83,7 +83,7 @@ qint64 qtcpsocketDispatcher( char * _buf, const qint64 _len,
 			sock->flush();
 			//sock->waitForBytesWritten();
 			break;
-		case SocketGetIPBoundTo:
+		case SocketGetPeerAddress:
 			strncpy( _buf,
 		sock->peerAddress().toString().toAscii().constData(), _len );
 			break;
